--- a/templates/app/School_list.html
+++ b/templates/app/School_list.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <center>
-        <h1>Schools list</h1>
-
-        {% for school in Schools %}
-        <a href="{{school.pk}}"><h2>{{School.Sname}}</h2></a>
+{% extends 'app/dummy.html' %}
 
 
+{% block title  %}
+        <title>School List page</title>
+{% endblock %}
 
-        {% endfor %}
-    </center>
-</body>
-</html>
+
+{% block body_block %}
+<h1>List Of Schools</h1>
+
+{% for school in schools %}
+   <a href="{{school.pk}}"> <h2>{{school.Sname}}</h2></a>
+{% endfor %}
+
+
+{% endblock %}
