--- a/templates/app/school_form.html
+++ b/templates/app/school_form.html
@@ -7,17 +7,22 @@
 
 
 {% block body_block %}
+{% if form.instance.pk %}
+    <h1>Update School Form </h1>
+{% else %}
     <h1>Create School Form</h1>
+{% endif %}
 
     <form method="POST">
         {% csrf_token %}
 
             {{form.as_p}}
+
+    {% if form.instance.pk %}    
+        <input type="submit" value="Update">
+
+    {% else %}
         <input type="submit" value="Create">
-
-
-
-
-
+    {% endif %}
     </form>
 {% endblock %}
